scripts/deploy/dev/appserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appserver
  namespace: default
spec:
  selector:
    matchLabels:
      app: appserver

  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: appserver
  
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      
      containers:
      - name: appserver
        image: asia.gcr.io/km/dev:latest
        resources:
          requests:
            cpu: 100m
            memory: 512Mi

        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 15
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            scheme: HTTP
            port: 3000
            path: /api/health
          initialDelaySeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
          
        ports:
        - containerPort: 3000
