scripts/deploy/dev/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongo
  namespace: default
  creationTimestamp: null

spec:
  serviceName: mongo-service
  selector:
    matchLabels:
      role: mongo

  replicas: 1
  revisionHistoryLimit: 10
  podManagementPolicy: OrderedReady

  template:
    metadata:
      labels:
        creationTimestamp: null
        role: mongo

    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 10
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool

      containers:
      - name: mongo
        image: mongo:5.0.8
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
          - containerPort: 27017
            protocol: TCP
        volumeMounts:
           - name: mongo-persistent-storage
             mountPath: /data/db

  updateStrategy:
    type: OnDelete

  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "standard-rwo"
        # volume.beta.kubernetes.io/storage-class: "fast"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
      volumeMode: Filesystem
