scripts/deploy/dev/appserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: default
  labels:
    app: appserver
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: appserver
